--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <img src="img/logo.png" alt="N.E.P. - Never Ending Projects">
         <p>
           Never Ending Projects UG (haftungsbeschr&auml;nkt)<br>
-          Robert-Koch-Platz 10<br>
-          30173 Hannover<br>
+          c/o 13 Labs<br>
+          Hohenzollernstraße 13<br>
+          30161 Hannover<br>
         </p>
         <p>
           <script>
